--- a/Svc/CMakeLists.txt
+++ b/Svc/CMakeLists.txt
@@ -46,6 +46,7 @@ add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TlmChan/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TlmPacketizer/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SystemResources/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FPManager/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MonitorMgr/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FP/")
 
 # Text logger components included by default, 
