Use the latest STARS with the fprime interface

--- a/Svc/FPManager/Makefile
+++ b/Svc/FPManager/Makefile
@@ -4,4 +4,5 @@ MODEL = FPManagerSm
 
 autocode:
 	@printf "**** Running the state-machine autocoder ****\n"
-	../../STARS/autocoder/Stars.py $(BACK-END) -namespace $(NAMESPACE) -noImpl $(MODEL).plantuml
+	../../STARS/autocoder/Stars.py -backend $(BACK-END) -namespace $(NAMESPACE) -noImpl -model $(MODEL).plantuml
+	../../STARS/autocoder/Stars.py -smbase
