--- a/FppTest/CMakeLists.txt
+++ b/FppTest/CMakeLists.txt
@@ -14,7 +14,7 @@ include("${CMAKE_CURRENT_LIST_DIR}/../cmake/FPrime-Code.cmake")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/array/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/component/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/dp/")
-add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/dpTool/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/DpTool/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/enum/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/struct/")
 set(SOURCE_FILES "source.cpp")
