--- a/Svc/CMakeLists.txt
+++ b/Svc/CMakeLists.txt
@@ -47,6 +47,7 @@ add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TlmChan/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/TlmPacketizer/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SystemResources/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FPManager/")
+add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/DpTool/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/MonitorMgr/")
 add_fprime_subdirectory("${CMAKE_CURRENT_LIST_DIR}/FP/")
 
